[project]
name = "smartmoney"
version = "0.1.0"
description = "Polymarket smart-money wallet scorer for PolyCop follow-trading"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "click>=8.1",
    "tenacity>=8.2",
    "dnspython>=2.6",
]

[project.scripts]
smartmoney = "smartmoney.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smartmoney*"]
